@@ -146,7 +146,9 @@ foreach my $d (&list_domains()) {
 
 		# Run the after command
 		&set_domain_envs($d, "MODIFY_DOMAIN", undef, \%oldd);
-		&made_changes();
+		local $merr = &made_changes();
+		&$second_print(&text('setup_emade', "<tt>$merr</tt>"))
+			if (defined($merr));
 		&reset_domain_envs($d);
 		$dc++;
 		}
