@@ -83,7 +83,8 @@ delete($d->{'disabled'});
 # Run the after command
 &run_post_actions();
 &set_domain_envs($d, "ENABLE_DOMAIN");
-&made_changes();
+local $merr = &made_changes();
+&$second_print(&text('setup_emade', "<tt>$merr</tt>")) if (defined($merr));
 &reset_domain_envs($d);
 
 &virtualmin_api_log(\@OLDARGV);
