@@ -371,6 +371,7 @@ setup_edirectives=The Apache directives for new websites set on the Module Confi
 setup_eemail=Missing contact email address
 setup_eemail2=A contact email address must be entered for servers that have no administration user
 setup_emaking=Before creation command failed : $1
+setup_emade=Post-creation command failed : $1
 setup_emailbox=An email address for the unix user cannot be created unless email is enabled for the server
 setup_edomslimit=Invalid maximum number of virtual servers
 setup_ealiasdomslimit=Invalid maximum number of alias servers
