@@ -301,7 +301,9 @@ foreach $d (@doms) {
 
 	# Run the after command
 	&set_domain_envs($d, "MODIFY_DOMAIN", undef, $oldd);
-	&made_changes();
+	local $merr = &made_changes();
+	&$second_print(&text('setup_emade', "<tt>$merr</tt>"))
+		if (defined($merr));
 	&reset_domain_envs($d);
 
 	&$outdent_print();
