@@ -257,7 +257,8 @@ print $text{'setup_done'},"<p>\n";
 
 # Run the after command
 &set_domain_envs($d, "MODIFY_DOMAIN", undef, \%oldd);
-&made_changes();
+local $merr = &made_changes();
+&$second_print(&text('setup_emade', "<tt>$merr</tt>")) if (defined($merr));
 &reset_domain_envs($d);
 &webmin_log("rename", "domain", $oldd{'dom'}, $d);
 
