@@ -54,7 +54,8 @@ foreach $f (@database_features) {
 
 # Run the after command
 &set_domain_envs($d, "MODIFY_DOMAIN", undef, $oldd);
-&made_changes();
+local $merr = &made_changes();
+&$second_print(&text('setup_emade', "<tt>$merr</tt>")) if (defined($merr));
 &reset_domain_envs($d);
 
 &webmin_log("dbname", "domain", $d->{'dom'}, $d);
