@@ -102,7 +102,8 @@ foreach $sd (@doms) {
 # Run the after command
 &run_post_actions();
 &set_domain_envs($d, "MODIFY_DOMAIN", undef, $oldd);
-&made_changes();
+local $merr = &made_changes();
+&$second_print(&text('setup_emade', "<tt>$merr</tt>")) if (defined($merr));
 &reset_domain_envs($d);
 &webmin_log("newip", "domain", $d->{'dom'}, $d);
 
