@@ -48,7 +48,8 @@ print $text{'setup_done'},"<p>\n";
 &release_lock_web($d);
 &run_post_actions();
 &set_domain_envs($d, "MODIFY_DOMAIN", undef, \%oldd);
-&made_changes();
+local $merr = &made_changes();
+&$second_print(&text('setup_emade', "<tt>$merr</tt>")) if (defined($merr));
 &reset_domain_envs($d);
 &webmin_log("proxy", "domain", $d->{'dom'}, $d);
 
